<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_chitchat"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.WelcomeActivity">

    <TextView
        android:id="@+id/tv_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_welcome_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_signup"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_welcome_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_12dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_signin"
        android:textColor="@android:color/white" />


</LinearLayout>