<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.MessageChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_chat"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/tv_username_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_26dp"
                android:text="@string/text_user_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rv_bottom"
        android:layout_below="@+id/appbar_chat" />

    <RelativeLayout
        android:id="@+id/rv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:padding="6dp">

        <ImageView
            android:id="@+id/iv_attact_image_file"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/image_button"
            android:background="@drawable/attach_file"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/write_message_here"
            android:layout_toEndOf="@id/iv_attact_image_file"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" />

        <ImageView
            android:id="@+id/iv_send_message"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/send"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</RelativeLayout>